# pydoe

./: .gitattributes  .gitignore  404.html  CLAUDE.md  LICENSE  README.md  TODO.md  index.html  mkdocs.yml  pyDOE.py  pyproject.toml  setup.py  sitemap.xml
.git-hooks/: pre-commit
.githooks/: pre-commit
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  code_style.yml  code_test.yml  dist_build.yml  docs.yml  docs_build.yml  linting.yml  publish.yml  publish_dist.yml  pull_request.yml  tests.yml
.github/workflows/inactive/: publish_dist.yml
audience/: index.html
contributing/: index.html
credits/: index.html
doc/: conf.py  index.rst  low_discrepancy_sequences.rst
docs/: audience.md  changelog.md  contributing.md  contributors.md  credits.md  index.md  installation.md  license.md  users.md
docs/assets/stylesheets/: extra.css
docs/reference/: doe_optimal.md  factorial.md  low_discrepancy_sequences.md  mixture.md  randomized.md  response_surface.md  sampling_designs.md  sequential.md  sparse_grid.md  specialized.md  taguchi.md
docs/theory/advanced-topics/: computer-aided-designs.md  confidence-region.md  constrained-mixture.md  constrained-optimization.md  d-optimal.md  eda-approach.md  eda-block-plot.md  eda-contour-axes.md  eda-contour-best-corner.md  eda-contour-curves.md  eda-contour-optimal-curve.md  eda-contour-optimal-setting.md  eda-contour-optimal-value.md  eda-contour-plot.md  eda-contour-steepest.md  eda-cumulative-ressd-plot.md  eda-effects-engineering.md  eda-effects-numerical.md  eda-effects-pattern.md  eda-effects-plot.md  eda-effects-statistical.md  eda-half-normal-plot.md  eda-interaction-plot.md  eda-mean-plot.md  eda-ordered-data-plot.md  eda-ressd-advantages.md  eda-ressd-confirmation.md  eda-ressd-domain.md  eda-ressd-extrapolation.md  eda-ressd-form.md  eda-ressd-good-model.md  eda-ressd-goodness.md  eda-ressd-interp-confirmation.md  eda-ressd-interpolation.md  eda-ressd-model.md  eda-ressd-predicted.md  eda-ressd-terms.md  eda-scatter-plot.md  eda-youden-plot.md  index.md  (+21 more)
docs/theory/analysis-doe/: confirming-results.md  doe-analysis-steps.md  doe-examples.md  fractional-factorial-example.md  full-factorial-example.md  index.md  interpreting-results.md  modeling-doe-data.md  plotting-doe-data.md  response-surface-example.md  testing-revising-models.md
docs/theory/assumptions/: index.md  measurement-system.md  process-stability.md  residuals.md  simple-model.md
docs/theory/glossary/: index.md
installation/: index.html
license/: index.html
pyDOE/: __init__.py  build_regression_matrix.py  doe_box_behnken.py  doe_composite.py  doe_cranley_patterson_shift.py  doe_doehlert.py  doe_factorial.py  doe_fold.py  doe_gsd.py  doe_halton.py  doe_korobov.py  doe_lhs.py  doe_plackett_burman.py  doe_random_k_means.py  doe_random_uniform.py  doe_rank1.py  doe_repeat_center.py  doe_saltelli.py  doe_sobol.py  doe_star.py  doe_taguchi.py  doe_union.py  doe_vanilla_morris.py  utils.py  var_regression_matrix.py
pyDOE/doe_optimal/: __init__.py  algorithms.py  criterion.py  efficiency.py  model.py  optimal.py  utils.py
pyDOE/grid_designs/: __init__.py  doe_sukharev.py
pyDOE/orthogonal_arrays/: __init__.py
pydoe/: __init__.py  __main__.py  debug.py  doe_box_behnken.py  doe_composite.py  doe_factorial.py  doe_fold.py  doe_korobov.py  doe_plackett_burman.py  doe_random_k_means.py  doe_random_uniform.py  doe_saltelli.py  doe_sobol.py  doe_star.py  doe_taguchi.py  utils.py
pydoe/clustering/: __init__.py
pydoe/doe_optimal/: __init__.py  algorithms.py  efficiency.py  optimal.py  utils.py
pydoe/factorial/: __init__.py  blocking.py  factorial.py  john_three_quarter.py  latin_square.py
pydoe/grid_designs/: __init__.py
pydoe/mixture/: __init__.py  axial.py  extreme_vertices.py  process.py  simplex.py
pydoe/optimal/: __init__.py  algorithms.py  criterion.py  efficiency.py  model.py  optimal.py  utils.py
pydoe/orthogonal_arrays/: orthogonal_arrays.py
pydoe/response_surface/: __init__.py  blocking.py  box_behnken.py  central_composite.py  small_composite.py  union.py
pydoe/sensitivity_analysis/: __init__.py  morris.py  saltelli.py
pydoe/sequential/: __init__.py  acquisition.py  adaptive.py  gaussian_process.py
pydoe/space_filling/: __init__.py
pydoe/sparse_grid/: __init__.py  sparse_grid.py
pydoe/specialized/: __init__.py  definitive_screening.py  supersaturated.py
pydoe/taguchi/: __init__.py  taguchi.py
pydoe/utils/: __init__.py  build_regression_matrix.py  iman_conover.py
pydoe_bk/: __init__.py  doe_box_behnken.py  doe_composite.py  doe_doehlert.py  doe_gsd.py  doe_korobov.py  doe_saltelli.py  doe_taguchi.py
pydoe_bk/doe_optimal/: __init__.py  algorithms.py  efficiency.py  optimal.py  utils.py
pydoe_bk/grid_designs/: __init__.py
reference/doe_optimal/: index.html
reference/factorial/: index.html
reference/low_discrepancy_sequences/: index.html
reference/randomized/: index.html
reference/response_surface/: index.html
reference/sampling_designs/: index.html
reference/sparse_grid/: index.html
reference/taguchi/: index.html
search/: search_index.json
tests/: test_blocking.py  test_box_behnken.py  test_composite.py  test_cranley_patterson_shift.py  test_distance_designs.py  test_doehlert.py  test_factorial.py  test_faure_sequence.py  test_gsd.py  test_halton_sequence.py  test_hammersley_sequence.py  test_iman_conover.py  test_john_three_quarter.py  test_korobov_sequence.py  test_latin_square.py  test_lhs.py  test_maxpro.py  test_mixture.py  test_nested_lhs.py  test_niederreiter_sequence.py  test_nolh.py  test_oa_lhd.py  test_optimal.py  test_plackett_burman.py  test_random_k_means.py  test_random_uniform.py  test_rank1_lattice.py  test_repeat_center.py  test_saltelli.py  test_sequential_acquisition.py  test_sequential_adaptive.py  test_sliced_lhs.py  test_sobol_sequence.py  test_sparse_grid.py  test_specialized.py  test_star.py  test_sukharev.py  test_taguchi_design.py  test_union.py  test_vanilla_morris.py
theory/introduction/: index.html
users/: index.html
(+81 files in other folders)
