[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyDOE"
dynamic = ["version"]
description = "Design of experiments for Python"
readme = "README.md"
authors = [{ name = "Abraham Lee", email = "tisimst@gmail.com" }]
maintainers = [
    { name = "Rickard Sjoegren", email = "r.sjogren89@gmail.com" },
    { name = "Rémi Lafage", email = "remi.lafage@onera.fr" }
]
license = "BSD-3-Clause"
keywords = [
    "DOE",
    "design of experiments",
    "experimental design",
    "optimal design",
    "taguchi design",
    "sparse grids",
    "optimization",
    "statistics",
    "python",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = ["numpy", "scipy"]

[project.urls]
source = "https://github.com/pydoe/pydoe"

[tool.hatch.version]
source = "vcs"
