[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pyDOE"
dynamic = ["version"]
description = "Design of Experiments for Python"
authors = [
    { name = "Abraham Lee", email = "tisimst@gmail.com" },
]
maintainers = [
    { name = "Saud Zahir", email = "m.saud.zahir@gmail.com" },
    { name = "M Laraib Ali", email = "laraibg786@outlook.com" },
    { name = "Rémi Lafage", email = "remi.lafage@onera.fr" }
]
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "DOE", "design of experiments", "experimental design", "optimal design",
    "taguchi design", "sparse grids", "optimization", "statistics", "python",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
dependencies = [ "numpy >= 1.22", "scipy >= 1.8" ]
# We pin this two versions behind the latest security release.
# Testing is performed only on currently maintained Python versions.
requires-python = ">=3.8"

[project.urls]
source = "https://github.com/pydoe/pydoe"
# TODO: add documentation URL
# TODO: provide changelog URL from docs
releasenotes = "https://github.com/pydoe/pydoe/releases/latest"
issues = "https://github.com/pydoe/pydoe/issues"

[dependency-groups]
dev = [
  {include-group = "docs"},
  {include-group = "lint"},
  {include-group = "test"}
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-minify-plugin>=0.8.0",
    "pymdown-extensions>=10.15",
]
lint = [
    "ruff==0.14.*",
]
test = [
    "pytest>=8.3.5",
    "pytest-xdist>=3.6.1",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 80
indent-width = 4
preview = true

# Output serialization format for violations. The default serialization
# format is "full" [env: RUFF_OUTPUT_FORMAT=] [possible values:
# concise, full, json, json-lines, junit, grouped, github, gitlab,
# pylint, rdjson, azure, sarif]
output-format = "grouped"

[tool.ruff.lint]
isort.lines-after-imports = 2
isort.split-on-trailing-comma = false

select = [
    "ANN", # flake8-annotations (required strict type annotations for public functions)
    "S",   # flake8-bandit (checks basic security issues in code)
    "BLE", # flake8-blind-except (checks the except blocks that do not specify exception)
    "FBT", # flake8-boolean-trap (ensure that boolean args can be used with kw only)
    "E",   # pycodestyle errors (PEP 8 style guide violations)
    "W",   # pycodestyle warnings (e.g., extra spaces, indentation issues)
    "DOC", # pydoclint issues (e.g., extra or missing return, yield, warnings)
    "A",   # flake8-buitins (check variable and function names to not shadow builtins)
    "N",   # Naming convention checks (e.g., PEP 8 variable and function names)
    "F",   # Pyflakes errors (e.g., unused imports, undefined variables)
    "I",   # isort (Ensures imports are sorted properly)
    "B",   # flake8-bugbear (Detects likely bugs and bad practices)
    "TID", # flake8-tidy-imports (Checks for banned or misplaced imports)
    "UP",  # pyupgrade (Automatically updates old Python syntax)
    "YTT", # flake8-2020 (Detects outdated Python 2/3 compatibility issues)
    "FLY", # flynt (Converts old-style string formatting to f-strings)
    "PIE", # flake8-pie
    "PL",  # pylint
    "RUF", # Ruff-specific rules (Additional optimizations and best practices)
]

# NOTE:
#     * Rule N999 is currently ignored, but in version 1.0.0
#     and above it will be enforced.
#     * Rule UP006 and UP007 are ignored to maintain compatibility
#     with Python version 3.8 which will be dropped in version 1.0.0
ignore = [
    "N803",      # [pep8-naming](https://docs.astral.sh/ruff/rules/invalid-argument-name/)
    "N806",      # [pep8-naming](https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function/)
    "N999",      # [pep8-naming](https://docs.astral.sh/ruff/rules/invalid-module-name/)
    "PLR2004",   # [pylint](https://docs.astral.sh/ruff/rules/magic-value-comparison/)
    "S311",      # [flake8-bandit](https://docs.astral.sh/ruff/rules/suspicious-non-cryptographic-random-usage/)
    "UP006",     # [pyupgrade](https://docs.astral.sh/ruff/rules/non-pep585-annotation/)
    "UP007",     # [pyupgrade](https://docs.astral.sh/ruff/rules/non-pep604-annotation-union/)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = [
    "ANN001",     # [flake8-annotations](https://docs.astral.sh/ruff/rules/missing-type-function-argument/)
    "ANN201",     # [flake8-annotations](https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function/)
    "ANN202",     # [flake8-annotations](https://docs.astral.sh/ruff/rules/missing-return-type-private-function/
    "S101",       # [flake8-bandit](https://docs.astral.sh/ruff/rules/assert/)
    "N802",       # [pep8-naming](https://docs.astral.sh/ruff/rules/invalid-function-name/)
    "N803",       # [pep8-naming](https://docs.astral.sh/ruff/rules/invalid-argument-name/)
    "N806",       # [pep8-naming](https://docs.astral.sh/ruff/rules/non-lowercase-variable-in-function/)
    "PLR6301",    # [pylint](https://docs.astral.sh/ruff/rules/no-self-use/)
]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true
